--- a/index.html
+++ b/index.html
@@ -1619,6 +1619,13 @@
             cursor: pointer;
             margin-left: 5px;
         }
+
+        @media (max-width: 600px) {
+  .work-description {
+    font-size: 0.95rem;
+    padding: 0.8rem;
+  }
+}
     </style>
 </head>
 
