--- a/index.html
+++ b/index.html
@@ -1620,10 +1620,14 @@
             margin-left: 5px;
         }
 
-        @media (max-width: 600px) {
-  .work-description {
-    font-size: 0.95rem;
-    padding: 0.8rem;
+        @media (max-width: 768px) {
+  .works-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .work-card {
+    width: 90%;
   }
 }
     </style>
