--- a/index.html
+++ b/index.html
@@ -1792,7 +1792,7 @@
     <section id="portfolio">
         <h2>Gallery</h2>
         <div class="gallery-slideshow">
-            <img id="galleryImage" src="https://via.placeholder.com/200x130?text=Gallery+1" alt="Gallery Image" />
+            <img id="galleryImage" src="https://instagram.fmnl4-7.fna.fbcdn.net/v/t1.15752-9/491214932_704707638614483_5991471628280377556_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=0024fc&_nc_ohc=8n5mO_9A3zcQ7kNvwEaXYpm&_nc_oc=AdlU8lvBk0m_LUe8PVmI3cJgCzQrHvM0jfHWgobcvVxJUusx6h0RzDz-eXnFEnGnUFegl0bKKdLxQMtmhWLRNnGD&_nc_zt=23&_nc_ht=instagram.fmnl4-7.fna&oh=03_Q7cD2QFZH4t9Gzq9sOv4iQQ0ssC53CEg9h6eFn1-yR-WTZ8prA&oe=685996BE" alt="Gallery Image" />
             <div class="gallery-buttons">
                 <button onclick="prevImage()">Previous</button>
                 <button onclick="nextImage()">Next</button>
