--- a/index.html
+++ b/index.html
@@ -2116,6 +2116,8 @@
                 else if (cmd.includes("help")) {
                     response = "cmd= help, status, shutdown, contact";
                 }
+                else if (cmd.includes("activate home protocol"))  {
+                    response = "Switching home protocol.";
 
 
                 // Default response
