--- a/index.html
+++ b/index.html
@@ -589,17 +589,17 @@
         }
 
         .bar.html::after {
-            width: 70%;
+            width: 40%;
             background-color: #e34c26;
         }
 
         .bar.css::after {
-            width: 40%;
+            width: 30%;
             background-color: #234fff;
         }
 
         .bar.js::after {
-            width: 20%;
+            width: 10%;
             background-color: #f0db4f;
         }
 
@@ -1732,7 +1732,7 @@
 
                     <!-- Typing Text -->
                     <div class="holo-text" aria-label="Hologram typing text">
-                        <div class="line typing-text" style="animation-delay: 0s;">NAME: RAYMARC BOBIS</div>
+                        <div class="line typing-text" style="animation-delay: 3s;">NAME: RAYMARC BOBIS</div>
                         <div class="line typing-text" style="animation-delay: 4s;">STATUS: Senior High School</div>
                         <div class="line typing-text" style="animation-delay: 8s;">FOCUS: Aspiring Web Developer</div>
                         <div class="line typing-text" style="animation-delay: 12s;">SKILLS: HTML, CSS, JavaScript</div>
@@ -1855,7 +1855,7 @@
                 const content = document.getElementById("secret-content");
                 const error = document.getElementById("error-msg");
 
-                if (password === "lovey072324") {
+                if (password === "072324") {
                     content.style.display = "block";
                     error.style.display = "none";
                 } else {
